Fix bouton visibilité mot de passe sur mobile
FossilOrigin-Name: a2544d6b5788ae372d1b353c7aaafde934cdbe5d

--- a/src/www/admin/static/admin.css
+++ b/src/www/admin/static/admin.css
@@ -336,9 +336,11 @@ input.resetButton {
 }
 
 input[type=button].showPassword {
+    position: absolute;
     margin-left: -2em;
     margin-right: 1em;
     background: none;
+    margin-top: .1em;
 }
 
 input[type=button].showPassword:hover {
